# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("utils_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "include",
  ]

  cflags_cc = [
    "-Wno-error=missing-braces",
    "-Wno-error=#warnings",
  ]
}

ohos_static_library("display_utils") {
  sources = [
    "src/display_adapter.cpp",
    "src/display_utils.cpp",
    "src/id_generator.cpp",
  ]

  public_configs = [ ":utils_config" ]

  output_name = "display_utils"

  include_dirs = [ "src" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  deps = [
    "//device/soc/hisilicon/hi3751v350/sdk_linux:libhal.so",
    "//drivers/peripheral/display/hal/default_standard:def_display_gralloc",
  ]
  subsystem_name = "hdf"
  part_name = "display_device_driver"
}
