# Copyright (c) 2022 HiSilicon (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
lite_component("hi3516dv300_histreaming_server") {
  features = [ ":ohos_histreaming_server" ]
}

need_link_mpp_lib = true
if (need_link_mpp_lib) {
  mpp_lib_path = "//device/soc/hisilicon/hi3516dv300/sdk_linux/out"
}

executable("ohos_histreaming_server") {
  output_name = "ohos_histreaming_server"
  sources = [
    "src/get_mac_addr.c",
    "src/hisignalling.c",
    "src/histreaming_client_server.c",
    "src/wif_sta.c",
  ]

  include_dirs = [
    "include",
    "//kernel/linux/linux-4.19/include/uapi",
    "//third_party/cJSON",
    "//third_party/libcoap/include/coap2",
  ]

  if (need_link_mpp_lib) {
    outdir = rebase_path("$mpp_lib_path/lib")
    ldflags = [ "-L$outdir" ]
    ldflags += [ "-lcoap" ]
    ldflags += [ "-llink_core" ]
    ldflags += [ "-lsecurec" ]

    deps = []
  }
}
